Правки по выборке данных
